# drobot

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.px4  INSTALL_DOCKER.md  README.md  TODO.md  docker-compose.yml  empty.world  entrypoint.sh  frames_2026-01-31_00.26.43.gv  frames_2026-01-31_00.35.14.gv  frames_2026-01-31_03.36.08.gv  lk  namyong.py  pick_and_place_demo.world  run.sh  setup.sh  test.py  test_project_assets.world  todo.md
.devcontainer/: devcontainer.json
drobot/src/drobot_scan_2d/: CMakeLists.txt  package.xml
drobot/src/drobot_scan_2d/drobot_scan_2d/: config.py
drobot_advanced/: CMakeLists.txt  package.xml
drobot_advanced/config/: roadmap.yaml
drobot_advanced/drobot_advanced/: __init__.py
drobot_advanced/drobot_advanced/isaac/: __init__.py
drobot_advanced/drobot_advanced/px4/: __init__.py
drobot_bringup/: CMakeLists.txt  package.xml  setup.cfg
drobot_bringup/config/: spawn_positions.yaml
drobot_bringup/config/navigation/: nav2_params.yaml
drobot_bringup/launch/: navigation.launch.py
drobot_desc/: CMakeLists.txt  package.xml
drobot_desc/launch/: gazebo.launch.py
drobot_desc/meshes/: left_rear_arm.STL  left_rear_wheel.STL  left_side_frame.STL  right_front_wheel.STL  right_side_frame.STL
drobot_desc/urdf/: drobot.urdf.xacro  gazebo.xacro  ros2_control.xacro
drobot_description/: CMakeLists.txt  package.xml
drobot_description/config/: display.rviz
drobot_description/launch/: gazebo.launch.py
drobot_description/meshes/: base_link.STL  left_front_arm.STL  left_front_wheel.STL  left_rear_arm.STL  left_rear_wheel.STL  left_side_frame.STL  leg_fl.stl  leg_fr.stl  right_front_arm.STL  right_front_wheel.STL  right_rear_arm.STL  right_rear_wheel.STL  right_side_frame.STL  wheel_fl.stl  wheel_fr.stl  wheel_rl.stl
drobot_description/models/AppleGood/: model.config  model.sdf
drobot_description/models/BananaBad/: model.sdf
drobot_description/models/base/: world.sdf.j2
drobot_description/models/environment/: lane_marking.sdf.j2  road.sdf.j2
drobot_description/models/obstacles/: box.sdf.j2  cylinder.sdf.j2  wall.sdf.j2
drobot_description/scripts/: UI_generator.py  generate_world.py  world_generator.py  world_generator_world.py
drobot_description/urdf/: drobot.urdf.xacro  gazebo.xacro
drobot_description/worlds/: drobot_world.sdf  empty.sdf  f1_circuit.sdf  full_world.sdf
drobot_description/worlds/configs/: empty.yaml  example.yaml
drobot_description/worlds/original/: hospital.world  hospital_original.world  pick_and_place_demo.world
drobot_navigation/: CMakeLists.txt  package.xml
drobot_navigation/config/: ekf.yaml  nav2_params.yaml
drobot_navigation/drobot_navigation/: __init__.py  config.py  goal_navigator.py
drobot_navigation/drobot_navigation/rules/: __init__.py  engine.py
drobot_navigation/launch/: navigation.launch.py
drobot_navigation/test/: test_rule_engine.py
drobot_simulation/: CMakeLists.txt  README.md  package.xml
drobot_simulation/config/: display.rviz  ekf.yaml  nav2_params.yaml  nav2_view.rviz  slam_params.yaml
drobot_simulation/drobot_simulation/: __init__.py  auto_explorer.py  config.py  odom_to_tf.py  types.py  utils.py
drobot_simulation/drobot_simulation/frontier/: __init__.py  detector.py  scorer.py
drobot_simulation/drobot_simulation/navigation/: __init__.py  collision.py  recovery.py
drobot_simulation/launch/: auto_explore.launch.py  display.launch.py  full_navigation.launch.py  localization.launch.py  navigation.launch.py  simulation.launch.py  slam.launch.py
drobot_simulation/meshes/: .gitkeep  leg_rl.stl  leg_rr.stl
drobot_simulation/urdf/: drobot.urdf.xacro
drobot_simulation/worlds/: empty.sdf  simple_room.sdf
re_files/: CMakeLists.txt  README.md  actuator_base.stl  drobot.urdf.xacro  gazebo.launch.py  gazebo.xacro  materials.xacro  package.xml  properties.xacro  side_frame_left.stl
re_files/files/: actuator_rod.stl  arm_left.stl  empty.world  macros.xacro  properties.xacro  ros2_control.xacro  side_frame_right.stl  simple_room.world  wheel.stl
robot_controller/: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
robot_controller/config/: params.yaml
robot_controller/launch/: bringup.launch.py  simulation.launch.py  teleop.launch.py
robot_controller/robot_controller/: __init__.py  commander_node.py  mode_manager_node.py  px4_interface_node.py  teleop_keyboard_node.py  wheel_controller_node.py
robot_controller/simulation/: pybullet_sim.py  pygame_sim.py
robot_controller/urdf/: drobot.urdf
ros2_ws/src/drobot_simulator/: CMakeLists.txt  package.xml
ros2_ws/src/drobot_tracker/: package.xml  setup.cfg  setup.py
ros2_ws/src/drobot_tracker/drobot_tracker/: data_association.py  kalman_filter.py  track.py  tracker_node.py
src/drobot_bringup/: package.xml  setup.py
src/drobot_bringup/config/: spawn_positions.yaml
src/drobot_bringup/config/common/: ros_gz_bridge.yaml
src/drobot_bringup/config/navigation/: nav2_params.yaml  navigate_with_replanning.xml
src/drobot_bringup/drobot_bringup/: world_ui.py  worldgen.py
src/drobot_bringup/launch/: controller_teleop.launch.py  navigation.launch.py
src/drobot_description/: CMakeLists.txt  package.xml
src/drobot_description/config/: display.rviz
src/drobot_description/launch/: display.launch.py
src/drobot_description/meshes/: base_link.STL  left_front_arm.STL  left_front_wheel.STL  left_rear_wheel.STL  right_front_arm.STL  right_front_wheel.STL  right_rear_arm.STL  right_rear_wheel.STL  right_side_frame.STL
src/drobot_description/models/AppleBad/: model.config
src/drobot_description/models/PizzaGood/: model.config
src/drobot_description/models/WhiteDish/: model.config  model.sdf
src/drobot_description/object/obstacle_library/: cylinder_obstacle.yaml
src/drobot_description/urdf/: drobot.urdf.xacro  gazebo.xacro  ros2_control.xacro
src/drobot_description/worlds/original/: basic.sdf  basic_with_center_cylinder.sdf  cafe.world  empty.sdf  hospital_three_floors.world  hospital_two_floors.world  test_project_assets.world  warehouse.sdf
(+1103 files in other folders)
