<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drobot_description</name>
  <version>0.1.0</version>
  <description>DROBOT - Drone-Rover Hybrid Military Reconnaissance Robot (SAC2026)</description>
  <maintainer email="bulnabi@snu.ac.kr">Bulnabi Software Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- URDF/Xacro -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- State Publishing -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <!-- Gazebo Harmonic -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- ros2_control -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
