<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_controller</name>
  <version>0.1.0</version>
  <description>
    ROS 2 package for controlling a robot (ground + flight hybrid robot).
    Part of the Drobot project - Caltech M4 inspired multi-modal robot.
  </description>

  <maintainer email="drobot@example.com">Drobot Team</maintainer>
  <license>MIT</license>

  <author>이강준</author>
  <author>김동욱</author>
  <author>이태호</author>
  <author>권현우</author>
  <author>권해찬</author>
  <author>송은서</author>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- PX4 dependencies (optional but recommended) -->
  <exec_depend>px4_msgs</exec_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
