<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drobot_bringup</name>
  <version>1.0.0</version>
  <description>Drobot bringup, UI launcher, and navigation launch files</description>
  <maintainer email="dongukleokim@gmail.com">leo11dk</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <exec_depend>drobot_description</exec_depend>
  <exec_depend>drobot_scan_2d</exec_depend>
  <exec_depend>drobot_controller</exec_depend>

  <!-- Simulation -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Navigation -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
