cmake_minimum_required(VERSION 3.8)
project(drobot_scan_2d)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)

# Install Python modules
ament_python_install_package(${PROJECT_NAME})

# Install Python scripts as executables
install(PROGRAMS
  drobot_scan_2d/goal_navigator.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
