<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drobot_tracker</name>
  <version>1.0.0</version>
  <description>Multi-object tracker with Kalman filter and Hungarian association</description>
  <maintainer email="kimjw0196@naver.com">jungwon</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>vision_msgs</depend>
  <depend>drobot_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
